--- a/style.css
+++ b/style.css
@@ -2,4 +2,50 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: rgb(255, 194, 119);
+}
+
+h1 {
+  text-align: center;
+  background-color:bisque;
+  padding: 25px;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgb(197, 141, 72);
+
+}
+figcaption{
+  text-align: center;
+  font-size: small;
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#featured-property p {
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+  max-width: 800px;
+}
+
+#details {
+  float: left;
+  padding: 20px;
+  background-color: bisque;
+  width: 100%;
+}
+div {
+  float:left;
+  text-align: center;
+  width: 25%;
 }
